feat: add service workers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo export -p web && npx workbox-cli generateSW workbox-config.js",
+    "generate-pwa-icons": "node ./scripts/generate-pwa-icons.js",
     "lint": "expo lint"
   },
   "dependencies": {
