--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "billance",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "packageManager": "bun@1.1.38",
+  "trustedDependencies": [],
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo export -p web && npx workbox-cli generateSW workbox-config.js",
+    "build:web": "expo export -p web && bunx workbox-cli generateSW workbox-config.js",
     "generate-pwa-icons": "node ./scripts/generate-pwa-icons.js",
     "lint": "expo lint"
   },
